--- a/Bluesport-MWG/Bluesport-MWG.csproj
+++ b/Bluesport-MWG/Bluesport-MWG.csproj
@@ -6,7 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="nlog.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="nlog.config" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NLog" Version="4.7.10" />
     <PackageReference Include="RestSharp" Version="106.12.0" />
   </ItemGroup>
 
